2009-05-28
	* new function of countAnchorsWithFileName(), different way to do things as countAnchors(), faster.

2009-05-27
	* Rewrite retrieval() according to revision of 2009-05-26.

2009-05-26
	* Use Anchor to mark the codings in the File Widget.
	* improvement of AddTo button in code categories Tab.

2009-05-25
	* add an icon for the main programme.

2009-05-22
	* plot code categories.

2009-05-21
	* improve "search file..." menu, to keep the last search pattern.

2009-05-20
	* add some tooltips of buttons in Code Tab.
	* font-setting for memo widget.

2009-05-19
	* Use glabel to display current project rather than a button.
	* Improve EditFileFun to place cursor at the beginning by default.
	* new argument x and y of gselect.list, to specify the position of the dialog widget.

2009-05-18
	* use options(widgetCoordinate=c(400,2)) to adjust the position of ViewFileFun widget etc.

2009-05-17
	* Minor improvement of GUI according to Kevin Brubeck Unhammer (see the mail list for details).

2009-05-12
	* improve UpdateFileofCaseWidget() to sort the items by time or	name.

2009-05-11
	* Could do coding within the C-cat Tab.
	* Improvement of popup menu of Case Tab.

2009-05-08
	* add Fid argument to SearchFiles().
	* fix bugs in addSettings() related to change of mark() etc.

2009-05-07
	* improve MemoWiget() to warning when close without saving.
	* fix bug of EditFileFun.
	* can handle subset of attributes only by selected subset of them.

2009-05-06
	* add arguments to UpdateTableWidget() to sort the items according to name or time -> by default, f-cat and c-cat are sorted by name.
	* Can edit a selected file (popup menu of Files/Case/F-cat Tab).
	* ShowSubset is generic now.

2009-05-05
	* add new argument to retrieval().
	* improvement of UpdateWidge to scroll the approriate position.
	* Use UpdateWidge after del/rename files and codes.
	* Improvement of add case button: Scroll to the new added case.